test_regress/t/t_fuzz_eof_bad.out
%Error: t/t_fuzz_eof_bad.v:5:25: Unterminated string
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_fuzz_eof_bad.v:4:15: EOF in (*
    4 |   initial $lay(*Hello!=nendmodule
      |               ^
%Error: t/t_fuzz_eof_bad.v:4:15: syntax error, unexpected end of file
    4 |   initial $lay(*Hello!=nendmodule
      |               ^
%Error: Cannot continue
        ... This fatal error may be caused by the earlier error(s); resolve those first.
